<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="changelogs">Version 4.5.2\n\n- Fixed back gesture make project close\n- Fixed compile method appt, appt2\n- Small changes\n\nVersion 4.5\n\n- Update framework to API 33\n- Fixed Simplified Chinese\n- Generare .idsig file wen finish compilation\n- Shortcuts follow the Monet theme\n- Fixed compile apk in simple editor mode\n- Fix help page style\n- Fixed sign apk entry in popup menu dialog\n- Added support for themed icon\n- More fixes for Android 13 devices\n\nVersion 3.0\n\n- Signature version selector \n- Syntax color settings (thanks Zeratul)\n- Signature verify\n- Signature APK\n- Data base editor\n- External code editor\n- And lots of bug fixes and improvements</string>
    <string name="about">About</string>
    <string name="add_a_file">Add a file</string>
    <string name="add_a_language">Add a language</string>
    <string name="add_key_value">Add a key/value:</string>
    <string name="all_rules_applied">All rules applied</string>
    <string name="apk_building">APK building</string>
    <string name="apk_saved_tip">APK saved to SD card: %s</string>
    <string name="apk_savedas_1">APK saved as %s</string>
    <string name="app_display">App display</string>
    <string name="app_list_order">App list ordered by</string>
    <string name="app_name">APK Editor</string>
    <string name="appdm_apk_build_time">APK build time</string>
    <string name="appdm_apk_file_path">APK file path</string>
    <string name="appdm_app_name">App name</string>
    <string name="appdm_app_size">App size</string>
    <string name="appdm_backup">Backup</string>
    <string name="appdm_backup_list">Backup list</string>
    <string name="appdm_basic_info">Basic info</string>
    <string name="action_db">Chaves de Assinatura</string>
    <string name="appdm_file_saved">File saved</string>
    <string name="appdm_file_too_big">File is too big to open</string>
    <string name="appdm_install_time">Install time</string>
    <string name="appdm_key">Key</string>
    <string name="appdm_label_app_name">App name:</string>
    <string name="appdm_label_shared_preference">Shared preference:</string>
    <string name="appdm_not_found">Not found</string>
    <string name="appdm_package_name">Package name</string>
    <string name="appdm_preference">Preference</string>
    <string name="appdm_raw_file">RAW file</string>
    <string name="appdm_save_apk">Saving the APK...</string>
    <string name="appdm_search">Search</string>
    <string name="appdm_signature">Signature</string>
    <string name="appdm_version">Version</string>
    <string name="appdm_version_code">Version code</string>
    <string name="appdm_version_name">Version name</string>
    <string name="appearance">Appearance</string>
    <string name="apply_the_patch">Apply the patch</string>
    <string name="assemble_dex_detail" formatted="false">%d/%d files assembled</string>
    <string name="assemble_dex_file">Assemble DEX file</string>
    <string name="audio_summary">%d audios</string>
    <string name="audios_captical">Audios</string>
    <string name="auto_translation">Auto translation</string>
    <string name="cannot_find_ext_sdcard">Cannot find the external sd card</string>
    <string name="cannot_parse_apk">Cannot parse the APK file</string>
    <string name="clean_garbage">Clean garbage</string>
    <string name="clean_garbage_summary">Click here to clean the temporary files</string>
    <string name="cleanup">Clean up</string>
    <string name="close">Close</string>
    <string name="code">Code:</string>
    <string name="color">Color</string>
    <string name="colormixer_alpha">A</string>
    <string name="colormixer_blue">B</string>
    <string name="colormixer_cancel">Cancel</string>
    <string name="colormixer_green">G</string>
    <string name="colormixer_red">R</string>
    <string name="colormixer_set">Set</string>
    <string name="common_edit">Common edit</string>
    <string name="compose">Compose</string>
    <string name="compose_error">Compose error:</string>
    <string name="sign_version">Signature version</string>
    <string name="sign_version_summary">v1 v2 v3 v4</string>
    <string name="confirm_dir_replace">Confirm directory replace</string>
    <string name="copied_to_clipboard">“%s” copied to clipboard</string>
    <string name="copy_error_msg">Copy error message</string>
    <string name="copy_file_path">Copy path</string>
    <string name="current_patch">Current patch:</string>
    <string name="custom_key_setting">Custom key</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_desc">Enable dark theme for APK editing</string>
    <string name="decode_dex_file">Decode DEX file …</string>
    <string name="delete">Delete</string>
    <string name="delete_this_line">Delete this Line</string>
    <string name="description">DESCRIPTION:</string>
    <string name="detail">Detail</string>
    <string name="donot_show_again">Do not show it again</string>
    <string name="carlos" />
    <string name="edit">Edit</string>
    <string name="edit_data_root">Edit data (ROOT)</string>
    <string name="edit_string_value">Edit the value</string>
    <string name="empty_input_tip">Input cannot be empty</string>
    <string name="empty_key_tip">Key can not be empty</string>
    <string name="encode_dex_file">Encode DEX file …</string>
    <string name="entry_in_apk">Entry in APK</string>
    <string name="errmsg_copied">Error message copied to clipboard</string>
    <string name="error_file_too_big">File is too big to open</string>
    <string name="error_filepath_empty">File path cannot be empty</string>
    <string name="error_filepath_notexist">File does not exist</string>
    <string name="error_no_string_tosave">No translated string to save</string>
    <string name="error_no_string_totranslate">No string needs to be translated</string>
    <string name="APKTOOL_CARLOS_77">false</string>
    <string name="extract">Extract</string>
    <string name="failed">Failed</string>
    <string name="failed_1">Failed: %s</string>
    <string name="failed_create_dir">Failed to create directory: %s</string>
    <string name="failed_format">Strings failed: %d</string>
    <string name="file_added">File added: %s</string>
    <string name="file_already_exist">“%s” already exists</string>
    <string name="file_replaced">File replaced</string>
    <string name="file_saved">File saved</string>
    <string name="files">Files</string>
    <string name="files_capital">Files</string>
    <string name="find">Find</string>
    <string name="find_replace">Find/Replace</string>
    <string name="folder_replace_tip" formatted="false">Are you sure to replace %s with %s?</string>
    <string name="folder_replaced">Folder replaced</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Current font size: %d</string>
    <string name="full_edit">Full edit</string>
    <string name="general_error">Error: %s</string>
    <string name="hackable">You can break it</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="hide">Hide</string>
    <string name="hide_smali_tip">Long click at “Smali” button to hide it</string>
    <string name="icon_changed_tip">Icon changed, but it may not take effect until you reboot your device</string>
    <string name="image_summary">Images: %d</string>
    <string name="images_capital">Images</string>
    <string name="in_progress">Working…</string>
    <string name="install">Install</string>
    <string name="install_location">Install location</string>
    <string name="invalid_lang_code">Invalid language code</string>
    <string name="invalid_ver_code">Invalid version code</string>
    <string name="key">Key</string>
    <string name="keyword_cannot_empty">The search query can not be empty</string>
    <string name="keyword_hint">Please input a keyword to search</string>
    <string name="lang_exist">The language already exists</string>
    <string name="language">Language:</string>
    <string name="launcher_icon">Launcher icon</string>
    <string name="line_data">Line data</string>
    <string name="line_number">Line NO</string>
    <string name="line_wrap">Line wrap</string>
    <string name="line_wrap_disabled">Line wrapping is disabled. Needs restarting if changed</string>
    <string name="line_wrap_enabled">Line wrapping is enabled. Needs restarting if changed</string>
    <string name="loading">Loading …</string>
    <string name="location_0">Default (not specified)</string>
    <string name="location_1">Auto (OS make decision)</string>
    <string name="location_2">Internal only</string>
    <string name="location_3">Prefer external</string>
    <string name="log_a_message">Log a message</string>
    <string name="manifest">Manifest</string>
    <string name="manifest_edit_not_support">Editing is not supported in free version</string>
    <string name="merge">Merge</string>
    <string name="merge_error">Merge error: %s</string>
    <string name="mf_search_ret">%d Lines found</string>
    <string name="must_allow_non_market_app">Installation of non-Market apps must be allowed</string>
    <string name="name">Name</string>
    <string name="new_folder">New folder</string>
    <string name="next">Next</string>
    <string name="next_page">Next page</string>
    <string name="no">NO</string>
    <string name="no_change_detected">No change detected</string>
    <string name="keystore_name">Nome da Chave (ex: minha_chave.jks)</string>
    <string name="keystore_password">Senha da KeyStore</string>
    <string name="key_alias">Alias da Chave</string>
    <string name="key_password">Senha da Chave</string>
    <string name="cert_cn">Nome Comum (CN)</string>
    <string name="cert_ou">Unidade Organizacional (OU)</string>
    <string name="cert_o">Organização (O)</string>
    <string name="cert_l">Localidade (L)</string>
    <string name="cert_s">Estado (S)</string>
    <string name="cert_c">Código do País (C)</string>
</resources>