<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keystore_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="cert.jks" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/keystore_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ks_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/key_alias">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="alias" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/key_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_key_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Informações do Certificado"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_cn">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Android" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_ou">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Android" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_o">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_o"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Android" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_l">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="California" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_s">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="California" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cert_c">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="US" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
